<resources>
    <string name="app_name">WithPool ScoreBoard</string>

    <string name="label_fragment_main">fragment_main</string>

    <string name="common_confirm">확인</string>
    <string name="common_complete">완료</string>
    <string name="common_cancel">취소</string>
    <string name="common_close">닫기</string>
    <string name="common_delete">삭제</string>
    <string name="common_add">추가</string>
    <string name="common_next">다음</string>
    <string name="common_player">Player</string>
    <string name="common_handicap">Handicap</string>
    <string name="common_x_handicap">%d점</string>
    <string name="common_x_wrapped_handicap">(%d점)</string>
    <string name="common_run_out">런아웃</string>
    <string name="common_run_out_en">Run out</string>
    <string name="common_run_out_en_x">Run out %d</string>
    <string name="common_run_out_line_break">Run\nout</string>
    <string name="common_point">포인트</string>
    <string name="common_point_en">Point</string>
    <string name="common_foul">파울</string>
    <string name="common_foul_en">Foul</string>
    <string name="common_finish">앱 종료</string>
    <string name="common_register">등록</string>
    <string name="common_move_to_back">돌아가기</string>
    <string name="common_on_back_pressed_notice">뒤로가기를 한번 더 누르면 앱이 종료됩니다</string>

    <string name="common_coming_soon">준비중입니다</string>


    <string name="fragment_choice_player">선수 선택</string>
    <string name="fragment_choice_player_change">선수 변경</string>
    <string name="fragment_choice_player_start_game">경기 시작</string>
    <string name="fragment_choice_player_change_first">선공 변경</string>
    <string name="fragment_choice_player_adjust_handicap_0">Full Handicap</string>
    <string name="fragment_choice_player_adjust_handicap_1">-1 Handicap</string>
    <string name="fragment_choice_player_adjust_handicap_2">-2 Handicap</string>
    <string name="fragment_choice_player_close">경기 취소</string>
    <string name="fragment_choice_player_first">선공</string>
    <string name="fragment_choice_player_info_title">도움말</string>
    <string name="fragment_choice_player_select_mode">게임 선택</string>
    <string name="fragment_choice_player_handicap">%d(%d)</string>
    <string name="fragment_choice_player_not_set">선수 미선택</string>
    <string name="fragment_choice_player_not_set_desc">선수를 모두 선택하고 눌러주세요.</string>
    <string name="fragment_choice_player_timer_mode_off">타이머 모드 OFF</string>
    <string name="fragment_choice_player_timer_mode_on">타이머 모드 ON</string>
    <string name="fragment_choice_player_anycall">Anycall Mode</string>
    <string name="fragment_choice_player_head_to_head_records">vs %1$s\n%2$d전 %3$d승 %4$d패</string>


    <string name="fragment_score_board_player">%s (%d)</string>
    <string name="fragment_score_board_handicap">(%d)</string>
    <string name="fragment_score_board_change_turn">턴 넘기기</string>
    <string name="fragment_score_board_finish_game">경기 종료</string>
    <string name="fragment_score_board_pocketing_avg">Pocketing\nAverage</string>

    <string name="fragment_nine_ball_register_match">경기 등록</string>
    <string name="fragment_nine_ball_would_you_register_match">경기가 종료되었습니다.\n경기 결과를 등록하시겠습니까?</string>
    <string name="fragment_nine_ball_finish_match">경기 종료</string>
    <string name="fragment_nine_ball_register_successful">경기 결과를 성공적으로 등록했습니다.</string>
    <string name="fragment_nine_ball_cancel_match">경기 취소</string>
    <string name="fragment_nine_ball_cancel_match_desc">경기를 취소하고 선수 선택화면으로 돌아가시겠습니까?</string>


    <string name="fragment_anycall_cancel_match_desc">경기를 종료하고 초기 화면으로 돌아가시겠습니까?</string>
    <string name="fragment_anycall_set_score">점수 설정</string>

    <string name="fragment_player_list_duplicated_player_title">중복 선택</string>
    <string name="fragment_player_list_duplicated_player_desc">이미 상대방으로 선택된 선수입니다.\n다른 선수를 선택해주세요.</string>


    <string name="dialog_set_total_title">목표 점수를 입력하세요</string>

    <string name="item_nav_score_board">ScoreBoard</string>
    <string name="item_nav_my_game">My game</string>
    <string name="item_nav_with_pool_live">WithPool LIVE</string>
    <string name="item_nav_database">Database</string>
    <string name="item_nav_profile">Profile</string>

    <string name="activity_score_board_rack">%d Rack</string>
    <string name="activity_score_board_inning">%d Inning</string>

    <string name="app_version_update">업데이트 안내</string>
    <string name="app_version_update_forced">업데이트가 필요합니다.\n최신 버젼을 다운로드하여 이용해주시기 바랍니다.</string>
    <string name="app_version_update_available">사용 가능한 업데이트가 있습니다.\n최신 버젼 업데이트 후 사용을 권장드립니다.</string>



</resources>