<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="wook.pool.board.screen.dialog.SetTotalDialog" />

        <variable
            name="dialog"
            type="SetTotalDialog" />

        <variable
            name="onClickCancel"
            type="Function1&lt;SetTotalDialog, Unit>" />

        <variable
            name="onClickConfirm"
            type="Function2&lt;SetTotalDialog, String, Unit>" />

        <import type="kotlin.jvm.functions.Function1" />

        <import type="kotlin.jvm.functions.Function2" />

        <import type="kotlin.Unit" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutDialog"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_ffffff_round_24"
            android:paddingBottom="@dimen/dp_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="3:2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textTitle"
                style="@style/notosans_bold"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:gravity="center"
                android:text="@string/dialog_set_total_title"
                app:autoSizeMaxTextSize="@dimen/dp_30"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_goneMarginTop="@dimen/dp_24" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTotal"
                style="@style/poppins_bold"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginVertical="@dimen/dp_8"
                android:gravity="center"
                android:hint="30"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/dp_20"
                android:textColorHint="@color/gray_bebdbd"
                android:textSize="100dp"
                app:layout_constraintBottom_toTopOf="@+id/btnConfirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnCancel"
                style="@style/whiteButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/dp_16"
                android:gravity="center"
                android:onClick="@{() -> onClickCancel.invoke(dialog)}"
                android:padding="@dimen/dp_8"
                android:text="@string/common_cancel"
                android:textAllCaps="false"
                app:autoSizeMaxTextSize="@dimen/dp_24"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/btnConfirm" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnConfirm"
                style="@style/blueButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:gravity="center"
                android:onClick="@{() -> onClickConfirm.invoke(dialog, editTotal.getText().toString())}"
                android:padding="@dimen/dp_8"
                android:text="@string/common_confirm"
                android:textAllCaps="false"
                app:autoSizeMaxTextSize="@dimen/dp_24"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@+id/btnCancel"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintLeft_toRightOf="@+id/btnCancel"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_goneMarginStart="20dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>