<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="wook.pool.board.screen.scoreboard.PlayersViewModel" />

        <variable
            name="listener"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_4c4c4c">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutLeftPlayer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dp_12"
            android:background="@drawable/bg_ffffff_round_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.35">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgLeftCircle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick="@{listener::onClick}"
                android:src="@drawable/circle_gray_size_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.7" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textBtnLeftChoicePlayer"
                style="@style/notosans_bold"
                bindVisibleOrGone="@{viewModel.playerLeft == null}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/bg_ffffff_round_6"
                android:gravity="center"
                android:padding="@dimen/dp_8"
                android:text="@string/fragment_choice_player"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@+id/imgLeftCircle"
                app:layout_constraintDimensionRatio="2:1"
                app:layout_constraintEnd_toEndOf="@+id/imgLeftCircle"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintStart_toStartOf="@+id/imgLeftCircle"
                app:layout_constraintTop_toTopOf="@+id/imgLeftCircle"
                tools:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textBtnLeftChangePlayer"
                style="@style/notosans_bold"
                bindVisibleOrGone="@{viewModel.playerLeft != null}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/bg_gray_round_6"
                android:gravity="center"
                android:onClick="@{listener::onClick}"
                android:padding="@dimen/dp_8"
                android:text="@string/fragment_choice_player_change"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="3:1"
                app:layout_constraintEnd_toEndOf="@+id/imgLeftCircle"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintStart_toStartOf="@+id/imgLeftCircle"
                app:layout_constraintTop_toBottomOf="@+id/imgLeftCircle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textLeftPlayerName"
                style="@style/notosans_bold"
                bindVisibleOrGone="@{viewModel.playerLeft != null}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@{viewModel.playerLeft.name}"
                android:visibility="visible"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toTopOf="@+id/textLeftPlayerHandicap"
                app:layout_constraintDimensionRatio="3:2"
                app:layout_constraintEnd_toEndOf="@+id/imgLeftCircle"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/imgLeftCircle"
                app:layout_constraintTop_toTopOf="@+id/imgLeftCircle"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintWidth_percent="0.4"
                tools:text="하광욱" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textLeftPlayerHandicap"
                style="@style/poppins_bold"
                bindAdjustedHandicap="@{viewModel.playerLeftAdjustedHandicap}"
                bindHandicap="@{viewModel.playerLeft.handicap}"
                bindVisibleOrGone="@{viewModel.playerLeft != null}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:maxLines="1"
                android:visibility="visible"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@+id/imgLeftCircle"
                app:layout_constraintEnd_toEndOf="@+id/textLeftPlayerName"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/textLeftPlayerName"
                app:layout_constraintTop_toBottomOf="@+id/textLeftPlayerName"
                app:layout_constraintWidth_percent="0.25"
                tools:text="5(4)" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutRightPlayer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dp_12"
            android:background="@drawable/bg_f0f4c3_round_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.35">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgRightCircle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:onClick="@{listener::onClick}"
                android:src="@drawable/circle_gray_size_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.7" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textBtnRightChoicePlayer"
                style="@style/notosans_bold"
                bindVisibleOrGone="@{viewModel.playerRight == null}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/bg_ffffff_round_6"
                android:gravity="center"
                android:padding="@dimen/dp_8"
                android:text="@string/fragment_choice_player"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@+id/imgRightCircle"
                app:layout_constraintDimensionRatio="2:1"
                app:layout_constraintEnd_toEndOf="@+id/imgRightCircle"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintStart_toStartOf="@+id/imgRightCircle"
                app:layout_constraintTop_toTopOf="@+id/imgRightCircle"
                tools:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textBtnRightChangePlayer"
                style="@style/notosans_bold"
                bindVisibleOrGone="@{viewModel.playerRight != null}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/bg_gray_round_6"
                android:gravity="center"
                android:onClick="@{listener::onClick}"
                android:padding="@dimen/dp_8"
                android:text="@string/fragment_choice_player_change"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="3:1"
                app:layout_constraintEnd_toEndOf="@+id/imgRightCircle"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintStart_toStartOf="@+id/imgRightCircle"
                app:layout_constraintTop_toBottomOf="@+id/imgRightCircle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textRightPlayerName"
                style="@style/notosans_bold"
                bindVisibleOrGone="@{viewModel.playerRight != null}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@{viewModel.playerRight.name}"
                android:visibility="visible"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toTopOf="@+id/textRightPlayerHandicap"
                app:layout_constraintDimensionRatio="3:2"
                app:layout_constraintEnd_toEndOf="@+id/imgRightCircle"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/imgRightCircle"
                app:layout_constraintTop_toTopOf="@+id/imgRightCircle"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintWidth_percent="0.4"
                tools:text="손대원" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textRightPlayerHandicap"
                style="@style/poppins_bold"
                bindAdjustedHandicap="@{viewModel.playerRightAdjustedHandicap}"
                bindHandicap="@{viewModel.playerRight.handicap}"
                bindVisibleOrGone="@{viewModel.playerRight != null}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:maxLines="1"
                android:visibility="visible"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@+id/imgRightCircle"
                app:layout_constraintEnd_toEndOf="@+id/textRightPlayerName"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/textRightPlayerName"
                app:layout_constraintTop_toBottomOf="@+id/textRightPlayerName"
                app:layout_constraintWidth_percent="0.25"
                tools:text="6(5)" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutBtnStartGame"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/bg_main_round_6"
            android:onClick="@{listener::onClick}"
            app:layout_constraintBottom_toBottomOf="@+id/layoutLeftPlayer"
            app:layout_constraintEnd_toStartOf="@+id/layoutRightPlayer"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintStart_toEndOf="@+id/layoutLeftPlayer">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgStarGame"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_start_game_24"
                app:layout_constraintBottom_toBottomOf="@+id/textStarGame"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toStartOf="@+id/textStarGame"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textStarGame" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textStarGame"
                style="@style/notosans_bold"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginVertical="@dimen/dp_8"
                android:layout_marginStart="@dimen/dp_8"
                android:gravity="center"
                android:text="@string/fragment_choice_player_start_game"
                android:textColor="@color/white"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imgStarGame"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textBtnAdjustHandicap"
            style="@style/notosans_bold"
            bindAdjustedHandicap="@{viewModel.handicapAdjustment}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/dp_16"
            android:background="@drawable/bg_43a047_round_6"
            android:gravity="center"
            android:onClick="@{listener::onClick}"
            android:textColor="@color/white"
            app:autoSizeMaxTextSize="@dimen/dp_40"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/layoutBtnStartGame"
            app:layout_constraintEnd_toEndOf="@+id/layoutBtnStartGame"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintStart_toStartOf="@+id/layoutBtnStartGame"
            tools:text="@string/fragment_choice_player_adjust_handicap_1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutBtnClose"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/dp_12"
            android:background="@drawable/bg_gray_round_6"
            android:onClick="@{listener::onClick}"
            app:layout_constraintEnd_toStartOf="@+id/layoutRightPlayer"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toEndOf="@+id/layoutLeftPlayer"
            app:layout_constraintTop_toTopOf="@+id/layoutLeftPlayer">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgClose"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_exit_app_24"
                app:layout_constraintBottom_toBottomOf="@+id/textClose"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toStartOf="@+id/textClose"
                app:layout_constraintHeight_percent="0.6"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textClose" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textClose"
                style="@style/notosans_bold"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginVertical="@dimen/dp_8"
                android:gravity="center"
                android:text="@string/common_finish"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imgClose"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBtnSelectGame"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:onClick="@{listener::onClick}"
            android:src="@drawable/ic_9ball"
            app:layout_constraintBottom_toTopOf="@+id/textBtnAdjustHandicap"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@+id/layoutRightPlayer"
            app:layout_constraintStart_toEndOf="@+id/layoutLeftPlayer"
            app:layout_constraintTop_toBottomOf="@+id/layoutBtnClose" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>